--- a/index.html
+++ b/index.html
@@ -3,28 +3,44 @@
 
 <head>
   <meta charset="utf-8">
-  <title>Quoth the Giphy</title>
-   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/css/bootstrap.min.css" integrity="sha384-/Y6pD6FV/Vv2HJnA6t+vslU6fwYXjCFtcEpHbNJ0lyAFsXTsjBbfaDjzALeQsN6M" crossorigin="anonymous">
-  <link href="https://fonts.googleapis.com/css?family=Russo+One" rel="stylesheet">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  <title>Giph App</title>
+
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css" integrity="sha384-PsH8R72JQ3SOdhVi3uxftmaW6Vc51MKb0q5P2rRUpPvrszuE4W1povHYgTpBfshb" crossorigin="anonymous">
+   
   <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 
 <body>
-  <div id="button-div">
-  </div>
+  <div class="row">
+    <div class="col-md-6">
+      <div id="button-div"></div>
+    </div>
+    <div class="col-md-6">
+      <form>
+        <span id="add-button">Button: <input id="new-button" type="text" ><input id="add-button-submit" value="Add Button" type="submit"></span>
+      </form>
+    </div>
+    
 
-  <form>
-    <span id="add-button">Button: <input id="new-button" type="text" ><input id="add-button-submit" value="Add Button" type="submit"></span>
-  </form>
+
+  </div>
+  
 
   <div id="gifs-appear-here">
   </div>
 
 </body>
 
+
+
+<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.3/umd/popper.min.js" integrity="sha384-vFJXuSJphROIrBnz7yo7oB41mKfc8JzQZiCq4NCceLEaO4IHwicKwpJf9c9IpFgh" crossorigin="anonymous"></script>
 
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/js/bootstrap.min.js" integrity="sha384-alpBpkh1PFOepccYVYDB4do5UnbKysX5WZXm3XxPqe5iKTfUKjNkCk9SaVuEZflJ" crossorigin="anonymous"></script>
 
 
 <script type="text/javascript" src="app.js"></script>
